Updated site to consider LOREAL styleguide

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
@@ -16,6 +29,30 @@
   </head>
 
   <body>
+    <!-- L'Oréal Loading Screen -->
+    <div id="introOverlay">
+      <div class="circle-container">
+        <svg viewBox="0 0 300 300" class="circle-art">
+          <circle r="60" cx="150" cy="150"></circle>
+          <circle r="75" cx="150" cy="150"></circle>
+          <circle r="90" cx="150" cy="150"></circle>
+          <circle r="105" cx="150" cy="150"></circle>
+          <circle r="120" cx="150" cy="150"></circle>
+        </svg>
+        <div class="logo-text">L’<span class="optical-o">O</span>RÉAL</div>
+        <div class="tagline">
+          <span>C</span><span>r</span><span>e</span><span>a</span><span>t</span
+          ><span>i</span><span>n</span><span>g</span>
+          &nbsp;
+          <span>b</span><span>e</span><span>a</span><span>u</span><span>t</span
+          ><span>i</span><span>f</span><span>u</span><span>l</span>
+          &nbsp;
+          <span>m</span><span>o</span><span>m</span><span>e</span><span>n</span
+          ><span>t</span><span>s</span>
+        </div>
+      </div>
+    </div>
+
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
