Seperated out Chatbot instructions, and Updated loading screen and chat bot logic

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <!-- Messages appear here -->
           </div>
 
+
           <form id="chatForm" class="chat-form">
             <label for="userInput" class="visually-hidden">Message</label>
             <input
@@ -83,12 +84,11 @@
   </nav>
 </footer>
 
-        </nav>
-      </footer>
-    </div>
 
     <!-- Scripts -->
     <script src="secrets.js"></script>
-    <script src="script.js"></script>
+    <script src="prompt.js"></script>
+    <script type="module" src="script.js"></script>
+
   </body>
 </html>
