--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Chat Assistant</title>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
-
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -40,9 +39,13 @@
 
     <div class="page-wrapper">
       <!------- Header / Branding ------->
-      <header class="site-header">
+    <header class="site-header">
+      <div class="branding vertical">
+        <img src="./img/loreal-logo.png" alt="L'Oréal Logo" class="loreal-logo" />
         <h1 class="site-title">Smart Product Advisor</h1>
-      </header>
+      </div>
+    </header>
+
 
       <!------- Chat Area ------->
       <main>
