Updated README.md file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat Assistant</title>
+    <title>L’Oréal Smart Product Advisor</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet" />
@@ -77,7 +77,7 @@
       
 <footer class="site-footer">
   <p>
-    &copy; 2025 Made by Kezia West. This is a student project and not affiliated with L'Oréal.
+    &copy; 2025 Made by Kezia West.
   </p>
   <nav>
     <a href="#">Privacy Policy</a>
